--- a/public/pages/insurance/kj-driver-company.html
+++ b/public/pages/insurance/kj-driver-company.html
@@ -287,7 +287,7 @@
                   <th>납부방식</th>
                   <th>인원</th>
                   <th>월보험료</th>
-                  <th>보험회사보험료</th>
+                  <th>1/10 보험료</th>
                   <th>배서보험료</th>
                   <th>계</th>
                   <th>환산보험료</th>
