정산 모달 테이블 조정

--- a/public/pages/insurance/kj-driver-company.html
+++ b/public/pages/insurance/kj-driver-company.html
@@ -286,11 +286,11 @@
                   <th>증권번호</th>
                   <th>납부방식</th>
                   <th>인원</th>
-                  <th>월보험료</th>
-                  <th>1/10 보험료</th>
-                  <th>배서보험료</th>
-                  <th>계</th>
-                  <th>환산보험료</th>
+                  <th style="width: 12%;">월보험료</th>
+                  <th style="width: 12%;">1/10 보험료</th>
+                  <th style="width: 12%;">배서보험료</th>
+                  <th style="width: 12%;">계</th>
+                  <th style="width: 12%;">환산보험료</th>
                 </tr>
               </thead>
               <tbody id="settlementAdjustmentTableBody">
