대리운전 신규 버튼 크기 조절

--- a/public/pages/insurance/kj-driver-company.html
+++ b/public/pages/insurance/kj-driver-company.html
@@ -87,7 +87,7 @@
                 
                 <!-- 신규 등록 버튼 -->
                 <div class="col-md-2 col-sm-6 mb-2 mb-md-0">
-                  <button type="button" class="btn btn-info btn-sm w-100" id="addCompany">
+                  <button type="button" class="btn btn-info w-100" id="addCompany">
                     <i class="fas fa-plus"></i> <span class="d-none d-md-inline">대리운전회사 신규</span>
                   </button>
                 </div>
