--- a/public/pages/insurance/kj-driver-company.html
+++ b/public/pages/insurance/kj-driver-company.html
@@ -244,6 +244,8 @@
   <script src="/js/insurance/kj-constants.js"></script>
   <!-- 공통 모듈 -->
   <script src="/js/insurance/kj-company-modal.js"></script>
+  <!-- SheetJS 라이브러리 (엑셀 다운로드용) -->
+  <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
   <!-- 페이지 전용 스크립트 -->
   <script src="/js/insurance/kj-driver-company.js"></script>
   <script>
