--- a/public/pages/insurance/kj-driver-company.html
+++ b/public/pages/insurance/kj-driver-company.html
@@ -377,6 +377,26 @@
     </div>
   </div>
 
+  <!-- 정산리스트 모달 -->
+  <div class="modal fade" id="settlementListModal2" tabindex="-1" aria-labelledby="settlementListModal2Label" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable" style="max-width: 90%;">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="settlementListModal2Label">정산리스트</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
+        </div>
+        <div class="modal-body" style="max-height: 80vh; overflow-y: auto;">
+          <div id="settlementListContent">
+            <!-- 동적으로 생성됨 -->
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- 배서리스트 모달 (정산 모달 좌측에 표시) -->
   <div class="modal fade" id="settlementListModal" tabindex="-1" aria-labelledby="settlementListModalLabel" aria-hidden="true" data-bs-backdrop="static">
     <div class="modal-dialog modal-xl modal-dialog-scrollable" style="position: fixed; left: 0; top: 50%; transform: translateY(-50%); margin: 0; max-width: 48%; z-index: 1056;">
