--- a/public/pages/staff/employee-schedule.html
+++ b/public/pages/staff/employee-schedule.html
@@ -478,6 +478,7 @@
       await window.sjTemplateLoader.initializePage('employee-schedule');
     });
   </script>
+   <script src="/js/staff/employee-schedule-mock.js"></script>
    <script src="/js/staff/employee-schedule.js"></script>
 </body>
 </html>
