--- a/public/pages/staff/employee-schedule.html
+++ b/public/pages/staff/employee-schedule.html
@@ -43,97 +43,30 @@
   <!-- 메인 컨텐츠 -->
   <main class="main-content">
     <div class="container-fluid">
-      <!-- 연도/월 선택 영역 (전체 너비) -->
-      <div class="row mb-3">
-        <div class="col-12">
-          <div class="card">
-            <div class="card-body py-2">
-              <div class="d-flex align-items-center justify-content-between flex-wrap gap-2">
-                <div class="d-flex align-items-center gap-2 flex-wrap">
-                  <button class="btn btn-outline-primary btn-sm" id="prevMonthBtn">
-                    <i class="fas fa-chevron-left"></i> <span class="d-none d-sm-inline">이전</span>
-                  </button>
-                  <div class="month-selector d-flex align-items-center gap-2">
-                    <select class="form-control form-control-sm" id="yearSelect" style="width: 90px;">
-                      <!-- 연도 옵션은 JavaScript에서 동적으로 생성 -->
-                    </select>
-                    <span class="small">년</span>
-                    <select class="form-control form-control-sm" id="monthSelect" style="width: 100px;">
-                      <option value="1">1월</option>
-                      <option value="2">2월</option>
-                      <option value="3">3월</option>
-                      <option value="4">4월</option>
-                      <option value="5">5월</option>
-                      <option value="6">6월</option>
-                      <option value="7">7월</option>
-                      <option value="8">8월</option>
-                      <option value="9">9월</option>
-                      <option value="10">10월</option>
-                      <option value="11">11월</option>
-                      <option value="12">12월</option>
-                    </select>
-                  </div>
-                  <button class="btn btn-outline-primary btn-sm" id="nextMonthBtn">
-                    <span class="d-none d-sm-inline">다음</span> <i class="fas fa-chevron-right"></i>
-                  </button>
-                  <button class="btn btn-primary btn-sm" id="todayBtn">
-                    <i class="fas fa-calendar-day me-1"></i><span class="d-none d-sm-inline">오늘</span>
-                  </button>
-                </div>
-                <div class="d-flex align-items-center gap-2">
-                  <h5 class="mb-0 text-muted d-none d-md-block">
-                    <i class="fas fa-calendar-check me-2"></i>
-                    <span id="currentMonthDisplay">2025년 12월</span>
-                  </h5>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- 메인 레이아웃: 2/3 캘린더 + 1/3 정보/버튼 -->
+      <!-- 메인 레이아웃: 1/3 정보/버튼 + 2/3 캘린더 -->
       <div class="row g-3">
-        <!-- 왼쪽: 캘린더 영역 (2/3) -->
-        <div class="col-lg-8 col-md-12">
-          <!-- 알림 영역 -->
-          <div id="noticeArea" class="mb-3">
-            <!-- 수습 기간 알림 -->
-            <div class="alert alert-info probation-notice d-flex align-items-center" id="probationNotice" style="display: none;">
-              <i class="fas fa-info-circle me-2"></i>
-              <div class="small">
-                <strong>수습 기간 중입니다.</strong> 주 4일 근무제는 입사 후 3개월 경과 후 적용됩니다.
-              </div>
-            </div>
-            
-            <!-- 공휴일 포함 주 알림 -->
-            <div class="alert alert-warning holiday-notice d-flex align-items-center" id="holidayNotice" style="display: none;">
-              <i class="fas fa-exclamation-triangle me-2"></i>
-              <div class="small">
-                <strong>공휴일 포함 주입니다.</strong> 이번 주는 주 4일 근무가 적용되지 않습니다.
-              </div>
-            </div>
-          </div>
-
-          <!-- 캘린더 영역 -->
-          <div class="card h-100">
-            <div class="card-header bg-light">
-              <h5 class="mb-0">
-                <i class="fas fa-calendar-alt me-2"></i>
-                월간 캘린더
-              </h5>
-            </div>
-            <div class="card-body p-2 p-md-3">
-              <div id="calendarContainer">
-                <!-- 캘린더는 JavaScript에서 동적으로 생성 -->
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- 오른쪽: 정보 및 버튼 영역 (1/3) -->
+        <!-- 왼쪽: 정보 및 버튼 영역 (1/3) -->
         <div class="col-lg-4 col-md-12">
           <div class="sticky-sidebar">
+            <!-- 알림 영역 -->
+            <div id="noticeArea" class="mb-3">
+              <!-- 수습 기간 알림 -->
+              <div class="alert alert-info probation-notice d-flex align-items-center" id="probationNotice" style="display: none;">
+                <i class="fas fa-info-circle me-2"></i>
+                <div class="small">
+                  <strong>수습 기간 중입니다.</strong> 주 4일 근무제는 입사 후 3개월 경과 후 적용됩니다.
+                </div>
+              </div>
+              
+              <!-- 공휴일 포함 주 알림 -->
+              <div class="alert alert-warning holiday-notice d-flex align-items-center" id="holidayNotice" style="display: none;">
+                <i class="fas fa-exclamation-triangle me-2"></i>
+                <div class="small">
+                  <strong>공휴일 포함 주입니다.</strong> 이번 주는 주 4일 근무가 적용되지 않습니다.
+                </div>
+              </div>
+            </div>
+
             <!-- 빠른 작업 버튼 -->
             <div class="card mb-3">
               <div class="card-header bg-primary text-white">
@@ -211,6 +144,57 @@
                   <div class="stat-label-compact text-muted">총 근무시간</div>
                   <div class="stat-value-compact fw-bold text-primary" id="totalHours">-</div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 오른쪽: 캘린더 영역 (2/3) -->
+        <div class="col-lg-8 col-md-12">
+          <!-- 캘린더 영역 -->
+          <div class="card h-100">
+            <div class="card-header bg-light">
+              <div class="d-flex align-items-center justify-content-between flex-wrap gap-2">
+                <h5 class="mb-0">
+                  <i class="fas fa-calendar-alt me-2"></i>
+                  <span id="currentMonthDisplay">2025년 12월</span>
+                </h5>
+                <div class="d-flex align-items-center gap-2 flex-wrap">
+                  <button class="btn btn-outline-primary btn-sm" id="prevMonthBtn">
+                    <i class="fas fa-chevron-left"></i> <span class="d-none d-sm-inline">이전</span>
+                  </button>
+                  <div class="month-selector d-flex align-items-center gap-2">
+                    <select class="form-control form-control-sm" id="yearSelect" style="width: 90px;">
+                      <!-- 연도 옵션은 JavaScript에서 동적으로 생성 -->
+                    </select>
+                    <span class="small">년</span>
+                    <select class="form-control form-control-sm" id="monthSelect" style="width: 100px;">
+                      <option value="1">1월</option>
+                      <option value="2">2월</option>
+                      <option value="3">3월</option>
+                      <option value="4">4월</option>
+                      <option value="5">5월</option>
+                      <option value="6">6월</option>
+                      <option value="7">7월</option>
+                      <option value="8">8월</option>
+                      <option value="9">9월</option>
+                      <option value="10">10월</option>
+                      <option value="11">11월</option>
+                      <option value="12">12월</option>
+                    </select>
+                  </div>
+                  <button class="btn btn-outline-primary btn-sm" id="nextMonthBtn">
+                    <span class="d-none d-sm-inline">다음</span> <i class="fas fa-chevron-right"></i>
+                  </button>
+                  <button class="btn btn-primary btn-sm" id="todayBtn">
+                    <i class="fas fa-calendar-day me-1"></i><span class="d-none d-sm-inline">오늘</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card-body p-2 p-md-3">
+              <div id="calendarContainer">
+                <!-- 캘린더는 JavaScript에서 동적으로 생성 -->
               </div>
             </div>
           </div>
