--- a/public/pages/staff/employee-schedule.html
+++ b/public/pages/staff/employee-schedule.html
@@ -176,7 +176,7 @@
                       <span class="d-none d-sm-inline">다음</span> <i class="fas fa-chevron-right"></i>
                     </button>
                     <button class="btn btn-secondary btn-sm" id="todayBtn">
-                      <i class="fas fa-calendar-day me-1"></i><span class="d-none d-sm-inline">오늘</span>
+                      <span>오늘</span>
                     </button>
                     <div class="vr d-none d-md-block" style="height: 24px; opacity: 0.3;"></div>
                     <button class="btn btn-primary btn-sm" id="halfDayBtn" title="반차 신청">
