--- a/public/pages/staff/holidays.html
+++ b/public/pages/staff/holidays.html
@@ -87,6 +87,9 @@
           <button class="btn btn-success" id="generateSubstituteBtn">
             <i class="fas fa-magic me-2"></i>대체 공휴일 자동 생성
           </button>
+          <button class="btn btn-warning" id="validateHolidaysBtn">
+            <i class="fas fa-check-circle me-2"></i>데이터 검증
+          </button>
         </div>
       </div>
       
@@ -176,6 +179,26 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
           <button type="button" class="btn btn-primary" id="saveHolidayBtn">저장</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- 검증 결과 모달 -->
+  <div class="modal fade" id="validateModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">공휴일 데이터 검증 결과</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <div id="validateResults">
+            <!-- 검증 결과가 여기에 표시됩니다 -->
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
         </div>
       </div>
     </div>
