--- a/public/pages/insurance/kj-driver-policy-search.html
+++ b/public/pages/insurance/kj-driver-policy-search.html
@@ -87,6 +87,20 @@
                       </div>
                     </div>
                   </div>
+                  
+                  <!-- 버튼 영역 -->
+                  <div class="row mt-3">
+                    <div class="col-md-6 mb-2">
+                      <button class="btn btn-warning w-100" type="button" id="changePolicyBtn">
+                        <i class="fas fa-exchange-alt"></i> 변경
+                      </button>
+                    </div>
+                    <div class="col-md-6 mb-2">
+                      <button class="btn btn-success w-100" type="button" id="excelDownloadBtn">
+                        <i class="fas fa-file-excel"></i> 엑셀 다운로드
+                      </button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -116,9 +130,65 @@
     </div>
   </main>
 
+  <!-- 증권번호 변경 모달 -->
+  <div class="modal fade" id="policyChangeModal" tabindex="-1" aria-labelledby="policyChangeModalLabel" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="policyChangeModalLabel">증권번호 변경</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
+        </div>
+        <div class="modal-body">
+          <!-- 변경 전 정보 -->
+          <div class="mb-4">
+            <h6 class="fw-bold mb-3">변경 전 정보</h6>
+            <div class="row g-3">
+              <div class="col-md-6">
+                <label for="modalOldPolicyNum" class="form-label">증권번호</label>
+                <input type="text" id="modalOldPolicyNum" class="form-control" readonly />
+              </div>
+              <div class="col-md-6">
+                <label for="modalOldStartyDay" class="form-label">시작일</label>
+                <input type="date" id="modalOldStartyDay" class="form-control" readonly />
+              </div>
+            </div>
+          </div>
+
+          <!-- 변경 후 정보 -->
+          <div class="mb-4">
+            <h6 class="fw-bold mb-3">변경 후 정보</h6>
+            <div class="row g-3">
+              <div class="col-md-6">
+                <label for="modalNewPolicyNum" class="form-label">새 증권번호</label>
+                <input type="text" id="modalNewPolicyNum" class="form-control" placeholder="예: 2025-S999999" />
+              </div>
+              <div class="col-md-6">
+                <label for="modalNewStartyDay" class="form-label">새 시작일</label>
+                <input type="date" id="modalNewStartyDay" class="form-control" />
+              </div>
+              <div class="col-md-12">
+                <label for="modalNewInsuranceCompany" class="form-label">새 보험회사</label>
+                <select id="modalNewInsuranceCompany" class="form-select">
+                  <option value="">=선택=</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+          <button type="button" class="btn btn-danger" id="executeChangeBtn">
+            <i class="fas fa-exchange-alt"></i> 변경 실행
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- SheetJS 라이브러리 (엑셀 다운로드용) -->
+  <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
   <!-- KJ 공통 상수 -->
   <script src="/js/insurance/kj-constants.js"></script>
   <!-- SJ 템플릿 로더 -->
