--- a/public/pages/staff/employee-schedule.html
+++ b/public/pages/staff/employee-schedule.html
@@ -132,6 +132,23 @@
                 </div>
               </div>
             </div>
+
+            <!-- 반차 신청 목록 -->
+            <div class="card mb-3">
+              <div class="card-body">
+                <div class="d-flex align-items-center justify-content-between mb-3">
+                  <h6 class="mb-0 text-muted small fw-normal text-uppercase">
+                    <i class="fas fa-list me-2"></i>반차 신청 내역
+                  </h6>
+                  <button class="btn btn-sm btn-outline-secondary" id="refreshHalfDayListBtn" title="새로고침">
+                    <i class="fas fa-sync-alt"></i>
+                  </button>
+                </div>
+                <div id="halfDayListContainer" style="max-height: 200px; overflow-y: auto;">
+                  <div class="text-center text-muted small py-3">반차 신청 내역을 불러오는 중...</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
