--- a/public/pages/insurance/kj-driver-policy-search.html
+++ b/public/pages/insurance/kj-driver-policy-search.html
@@ -42,7 +42,9 @@
               <div class="row align-items-end">
                 <div class="col-md-4 col-sm-6 mb-2 mb-md-0">
                   <label for="oldPolicyNum" class="form-label">증권번호</label>
-                  <input type="text" id="oldPolicyNum" class="form-control" placeholder="예: 2025-S331191" />
+                  <select id="oldPolicyNum" class="form-select">
+                    <option value="">=선택=</option>
+                  </select>
                 </div>
                 <div class="col-md-4 col-sm-6 mb-2 mb-md-0">
                   <label for="oldStartyDay" class="form-label">시작일</label>
