--- a/public/pages/insurance/kj-driver-policy-search.html
+++ b/public/pages/insurance/kj-driver-policy-search.html
@@ -45,6 +45,7 @@
                   <select id="oldPolicyNum" class="form-select">
                     <option value="">=선택=</option>
                   </select>
+                  <input type="text" id="oldPolicyNumInput" class="form-control mt-2" placeholder="직접 입력: 예: 2025-S331191" style="display: none;" />
                 </div>
                 <div class="col-md-4 col-sm-6 mb-2 mb-md-0">
                   <label for="oldStartyDay" class="form-label">시작일</label>
