--- a/public/pages/insurance/kj-driver-policy-search.html
+++ b/public/pages/insurance/kj-driver-policy-search.html
@@ -41,9 +41,8 @@
             <div class="search-filter-row mb-4">
               <div class="row align-items-end">
                 <div class="col-md-4 col-sm-6 mb-2 mb-md-0">
-                  <label for="oldPolicyNum" class="form-label">증권번호</label>
                   <select id="oldPolicyNum" class="form-select">
-                    <option value="">=선택=</option>
+                    <option value="">증권번호</option>
                   </select>
                   <input type="text" id="oldPolicyNumInput" class="form-control mt-2" placeholder="직접 입력: 예: 2025-S331191" style="display: none;" />
                 </div>
