--- a/public/pages/insurance/kj-driver-policy-search.html
+++ b/public/pages/insurance/kj-driver-policy-search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>보험 CMS | KJ 대리운전 - 증권번호찾기</title>
+  <title>보험 CMS | KJ 대리운전 - 갱신</title>
   <!-- 한글 폰트 & 아이콘 & 부트스트랩 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
