--- a/public/pages/insurance/kj-driver-policy-search.html
+++ b/public/pages/insurance/kj-driver-policy-search.html
@@ -121,7 +121,7 @@
                 </thead>
                 <tbody id="policySearchTableBody">
                   <tr>
-                    <td colspan="5" class="text-center py-4">증권번호와 시작일을 입력하고 검색 버튼을 클릭하세요.</td>
+                    <td colspan="5" class="text-center py-4">증권번호를 선택하면 시작일이 표시됩니다.  검색 버튼을 클릭하세요. 증권번호 선택 맨 아래 증권번호 입력도 가능합니다.</td>
                   </tr>
                 </tbody>
               </table>
