근무스케줄

--- a/public/pages/staff/employees.html
+++ b/public/pages/staff/employees.html
@@ -213,6 +213,7 @@
   </script>
   <script src="/js/staff/employee-modal.js"></script><!-- 상세보기-->
   <script src="/js/staff/department-manager.js"></script><!--부서관리-->
+  <script src="/js/staff/work-schedule-manager.js"></script><!--근무 스케줄 관리-->
   <script src="/js/staff/employee-list.js"></script>
   
 </body>
