--- a/public/pages/tickets/types-guide.html
+++ b/public/pages/tickets/types-guide.html
@@ -738,7 +738,7 @@
         </div>
 
         <!-- 빠른 판단 가이드 -->
-        <div class="type-card">
+        <div class="type-card mb-3">
           <h3><i class="fas fa-bolt"></i> 빠른 판단 가이드 (직원용)</h3>
           <p class="mb-3"><strong>"이 일을 왜 시작했는가?"</strong></p>
           
