--- a/public/pages/tickets/types-guide.html
+++ b/public/pages/tickets/types-guide.html
@@ -191,7 +191,7 @@
     .quick-guide-table {
       width: 100%;
       border-collapse: collapse;
-      margin: 1.5rem 0;
+      margin: 1rem 0 0 0;
     }
     
     .quick-guide-table th,
@@ -742,7 +742,7 @@
           <h3><i class="fas fa-bolt"></i> 빠른 판단 가이드 (직원용)</h3>
           <p class="mb-3"><strong>"이 일을 왜 시작했는가?"</strong></p>
           
-          <div class="table-responsive">
+          <div class="table-responsive mb-0">
             <table class="quick-guide-table">
               <thead>
                 <tr>
