--- a/public/pages/tickets/about.html
+++ b/public/pages/tickets/about.html
@@ -442,6 +442,39 @@
               발행되면 반드시 처리되어야 하며, 처리 과정이 모두 기록되고, 책임자가 명확합니다.
             </p>
           </div>
+          
+          <div class="highlight-box" style="border-left-color: #198754; margin-top: 1.5rem;">
+            <h4 style="color: #198754; margin-bottom: 1rem;">
+              <i class="fas fa-language"></i> Ticket과 Case의 차이
+            </h4>
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <div style="background: #f8f9fa; padding: 1rem; border-radius: 0.375rem;">
+                  <h5 style="color: #667eea; margin-bottom: 0.5rem;">
+                    <i class="fas fa-server"></i> Ticket
+                  </h5>
+                  <p class="mb-0" style="font-size: 0.95rem;">
+                    <strong>시스템의 언어</strong><br>
+                    기술적 단위, 데이터베이스에 저장되는 구조화된 정보
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-6 mb-3">
+                <div style="background: #f8f9fa; padding: 1rem; border-radius: 0.375rem;">
+                  <h5 style="color: #198754; margin-bottom: 0.5rem;">
+                    <i class="fas fa-users"></i> Case
+                  </h5>
+                  <p class="mb-0" style="font-size: 0.95rem;">
+                    <strong>조직의 언어</strong><br>
+                    사람들이 일상적으로 사용하는 업무 단위, 비즈니스 맥락
+                  </p>
+                </div>
+              </div>
+            </div>
+            <p class="mt-3 mb-0" style="font-size: 0.95rem; font-style: italic;">
+              "우리는 Case를 Ticket으로 변환하여 시스템에 기록합니다."
+            </p>
+          </div>
         </div>
 
         <!-- 구조적 의미 -->
