--- a/public/pages/tickets/guide.html
+++ b/public/pages/tickets/guide.html
@@ -251,7 +251,7 @@
         
         <!-- 네비게이션 메뉴 -->
         <nav class="guide-nav">
-          <ul class="nav nav-pills justify-content-center">
+          <ul class="nav nav-pills">
             <li class="nav-item">
               <a class="nav-link active" href="#section1" data-section="section1">
                 <i class="fas fa-building"></i> SIMG의 일하는 방법
@@ -272,23 +272,6 @@
 
         <!-- 섹션 1: SIMG의 일하는 방법 -->
         <section id="section1" class="guide-section">
-          <div class="section-header">
-            <div class="d-flex align-items-center justify-content-center mb-3">
-              <div class="feature-icon" style="width: 80px; height: 80px; font-size: 2rem; margin-right: 1rem;">
-                <i class="fas fa-building"></i>
-              </div>
-              <div>
-                <h1 style="font-size: 2.5rem; font-weight: 700; margin: 0;">에스아이엠지(SIMG)의 일하는 방법</h1>
-                <p class="lead mb-0" style="font-size: 1.1rem; opacity: 0.95;">Part 1: 우리는 어떻게 일하는가?</p>
-              </div>
-            </div>
-            <div class="alert alert-light" style="max-width: 800px; margin: 1.5rem auto 0; text-align: left;">
-              <p class="mb-2"><strong>에스아이엠지는</strong></p>
-              <p class="mb-0" style="font-size: 1.1rem; font-weight: 500;">일을 사람에게 맡기지 않고,<br>
-              판단과 책임이 남는 구조로 일합니다.</p>
-            </div>
-          </div>
-
           <!-- 1. 이 문서를 만드는 이유 -->
           <div class="concept-card">
             <h3><i class="fas fa-question-circle"></i> 1️⃣ 우리가 이 문서를 만드는 이유</h3>
@@ -524,23 +507,6 @@
 
         <!-- 섹션 2: 티켓 시스템 상세 설명 -->
         <section id="section2" class="guide-section">
-          <div class="section-header sec2">
-            <div class="d-flex align-items-center justify-content-center mb-3">
-              <div class="feature-icon" style="width: 80px; height: 80px; font-size: 2rem; margin-right: 1rem; background: linear-gradient(135deg, #198754 0%, #20c997 100%);">
-                <i class="fas fa-ticket-alt"></i>
-              </div>
-              <div>
-                <h1 style="font-size: 2.5rem; font-weight: 700; margin: 0;">티켓 시스템 상세 설명</h1>
-                <p class="lead mb-0" style="font-size: 1.1rem; opacity: 0.95;">Part 2: 티켓이란 무엇인가?</p>
-              </div>
-            </div>
-            <div class="alert alert-light" style="max-width: 800px; margin: 1.5rem auto 0; text-align: left;">
-              <p class="mb-0" style="font-size: 1.1rem; font-weight: 500;">
-                티켓은 '일'이 아니라,<br>
-                <strong>'책임·결정·이력을 함께 봉인한 단위'</strong>입니다.
-              </p>
-            </div>
-          </div>
 
           <!-- 핵심 정의 -->
           <div class="concept-card">
@@ -853,23 +819,6 @@
 
         <!-- 섹션 3: 티켓 유형 가이드 -->
         <section id="section3" class="guide-section">
-          <div class="section-header sec3">
-            <div class="d-flex align-items-center justify-content-center mb-3">
-              <div class="feature-icon" style="width: 80px; height: 80px; font-size: 2rem; margin-right: 1rem; background: linear-gradient(135deg, #ffc107 0%, #ff9800 100%);">
-                <i class="fas fa-tags"></i>
-              </div>
-              <div>
-                <h1 style="font-size: 2.5rem; font-weight: 700; margin: 0;">티켓 유형 가이드</h1>
-                <p class="lead mb-0" style="font-size: 1.1rem; opacity: 0.95;">Part 3: 9가지 티켓 유형 이해하기</p>
-              </div>
-            </div>
-            <div class="alert alert-light" style="max-width: 800px; margin: 1.5rem auto 0; text-align: left;">
-              <p class="mb-0" style="font-size: 1.1rem; font-weight: 500;">
-                모든 업무는 아래 9가지 티켓 유형 중 하나로만 시작합니다<br>
-                티켓 유형은 일을 제한하려는 게 아니라, 일을 보호하기 위한 분류입니다.
-              </p>
-            </div>
-          </div>
 
           <!-- 기본 원칙 -->
           <div class="concept-card">
